@@ -2,6 +2,7 @@
   - Mentioned the lack of compatibility of "use Error qw(:try)" with Moose.
     Fixed: https://rt.cpan.org/Ticket/Display.html?id=46364
   - Added TryCatch and Try::Tiny to the "SEE ALSO".
+  - Add the WARNING that this module is no longer recommended.
 
 Jul 19 2008 <shlomif@iglu.org.il> (Shlomi Fish)
 
